--- a/templates/shop.html
+++ b/templates/shop.html
@@ -28,144 +28,255 @@
 		</div>
 	</div>
 </section>
-<section id="testimonial">
 
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-5">
-				<div class="mb-8 text-start">
-					<h5 class="text-secondary">Testimonios</h5>
-					<h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">¿Qué dice la gente de
-						nosotros?</h3>
-				</div>
+
+<div class="container">
+	<div class="row">
+		<div class="col-lg-5">
+			<div class="mb-8 text-start">
+				<h5 class="text-secondary">Testimonios</h5>
+				<h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">¿Qué dice la gente de
+					nosotros?</h3>
 			</div>
-			<div class="col-lg-1"></div>
-			<div class="col-lg-6">
-				<div class="pe-7 ps-5 ps-lg-0">
-					<div class="carousel slide carousel-fade position-static" id="testimonialIndicator"
-						data-bs-ride="carousel">
-						<div class="carousel-indicators">
-							<button class="active" type="button" data-bs-target="#testimonialIndicator"
-								data-bs-slide-to="0" aria-current="true" aria-label="Testimonial 0"></button>
-							<button class="false" type="button" data-bs-target="#testimonialIndicator"
-								data-bs-slide-to="1" aria-current="true" aria-label="Testimonial 1"></button>
-							<button class="false" type="button" data-bs-target="#testimonialIndicator"
-								data-bs-slide-to="2" aria-current="true" aria-label="Testimonial 2"></button>
-						</div>
-						<div class="carousel-inner">
-							<div class="carousel-item position-relative active">
-								<div class="card shadow" style="border-radius:10px;">
-									<div class="position-absolute start-0 top-0 translate-middle"> <img
-											class="rounded-circle fit-cover"
-											src="static/assets/img/testimonial/author.png" height="65" width="65"
-											alt="" /></div>
-									<div class="card-body p-4">
-										<p class="fw-medium mb-4">&quot;On the Windows talking painted pasture
-											yet its express parties use. Sure last upon he same as knew next. Of
-											believed or diverted no.&quot;</p>
-										<h5 class="text-secondary">Mike taylor</h5>
-										<p class="fw-medium fs--1 mb-0">Lahore, Pakistan</p>
-									</div>
+		</div>
+		<div class="col-lg-1"></div>
+		<div class="col-lg-6">
+			<div class="pe-7 ps-5 ps-lg-0">
+				<div class="carousel slide carousel-fade position-static" id="testimonialIndicator"
+					data-bs-ride="carousel">
+					<div class="carousel-indicators">
+						<button class="active" type="button" data-bs-target="#testimonialIndicator" data-bs-slide-to="0"
+							aria-current="true" aria-label="Testimonial 0"></button>
+						<button class="false" type="button" data-bs-target="#testimonialIndicator" data-bs-slide-to="1"
+							aria-current="true" aria-label="Testimonial 1"></button>
+						<button class="false" type="button" data-bs-target="#testimonialIndicator" data-bs-slide-to="2"
+							aria-current="true" aria-label="Testimonial 2"></button>
+					</div>
+					<div class="carousel-inner">
+						<div class="carousel-item position-relative active">
+							<div class="card shadow" style="border-radius:10px;">
+								<div class="position-absolute start-0 top-0 translate-middle"> <img
+										class="rounded-circle fit-cover" src="static/assets/img/testimonial/author.png"
+										height="65" width="65" alt="" /></div>
+								<div class="card-body p-4">
+									<p class="fw-medium mb-4">&quot;On the Windows talking painted pasture
+										yet its express parties use. Sure last upon he same as knew next. Of
+										believed or diverted no.&quot;</p>
+									<h5 class="text-secondary">Mike taylor</h5>
+									<p class="fw-medium fs--1 mb-0">Lahore, Pakistan</p>
 								</div>
-								<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
-									style="border-radius:10px;transform:translate(25px, 25px)"> </div>
 							</div>
-							<div class="carousel-item position-relative ">
-								<div class="card shadow" style="border-radius:10px;">
-									<div class="position-absolute start-0 top-0 translate-middle"> <img
-											class="rounded-circle fit-cover"
-											src="static/assets/img/testimonial/author2.png" height="65" width="65"
-											alt="" /></div>
-									<div class="card-body p-4">
-										<p class="fw-medium mb-4">&quot;Jadoo is recognized as one of the finest
-											travel agency in the world. When it came to planning a trip, I found
-											them to be dependable.&quot;</p>
-										<h5 class="text-secondary">Thomas Wagon</h5>
-										<p class="fw-medium fs--1 mb-0">CEO of Red Button</p>
-									</div>
-								</div>
-								<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
-									style="border-radius:10px;transform:translate(25px, 25px)"> </div>
-							</div>
-							<div class="carousel-item position-relative ">
-								<div class="card shadow" style="border-radius:10px;">
-									<div class="position-absolute start-0 top-0 translate-middle"> <img
-											class="rounded-circle fit-cover"
-											src="static/assets/img/testimonial/author3.png" height="65" width="65"
-											alt="" /></div>
-									<div class="card-body p-4">
-										<p class="fw-medium mb-4">&quot;On the Windows talking painted pasture
-											yet its express parties use. Sure last upon he same as knew next. Of
-											believed or diverted no.&quot;</p>
-										<h5 class="text-secondary">Kelly Willium</h5>
-										<p class="fw-medium fs--1 mb-0">Khulna, Bangladesh</p>
-									</div>
-								</div>
-								<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
-									style="border-radius:10px;transform:translate(25px, 25px)"> </div>
-							</div>
+							<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
+								style="border-radius:10px;transform:translate(25px, 25px)"> </div>
 						</div>
-						<div class="carousel-navigation d-flex flex-column flex-between-center position-absolute end-0 top-lg-50 bottom-0 translate-middle-y z-index-1 me-3 me-lg-0"
-							style="height:60px;width:20px;">
-							<button class="carousel-control-prev position-static" type="button"
-								data-bs-target="#testimonialIndicator" data-bs-slide="prev"><img
-									src="static/assets/img/icons/up.svg" width="16" alt="icon" /></button>
-							<button class="carousel-control-next position-static" type="button"
-								data-bs-target="#testimonialIndicator" data-bs-slide="next"><img
-									src="static/assets/img/icons/down.svg" width="16" alt="icon" /></button>
+						<div class="carousel-item position-relative ">
+							<div class="card shadow" style="border-radius:10px;">
+								<div class="position-absolute start-0 top-0 translate-middle"> <img
+										class="rounded-circle fit-cover" src="static/assets/img/testimonial/author2.png"
+										height="65" width="65" alt="" /></div>
+								<div class="card-body p-4">
+									<p class="fw-medium mb-4">&quot;Jadoo is recognized as one of the finest
+										travel agency in the world. When it came to planning a trip, I found
+										them to be dependable.&quot;</p>
+									<h5 class="text-secondary">Thomas Wagon</h5>
+									<p class="fw-medium fs--1 mb-0">CEO of Red Button</p>
+								</div>
+							</div>
+							<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
+								style="border-radius:10px;transform:translate(25px, 25px)"> </div>
 						</div>
+						<div class="carousel-item position-relative ">
+							<div class="card shadow" style="border-radius:10px;">
+								<div class="position-absolute start-0 top-0 translate-middle"> <img
+										class="rounded-circle fit-cover" src="static/assets/img/testimonial/author3.png"
+										height="65" width="65" alt="" /></div>
+								<div class="card-body p-4">
+									<p class="fw-medium mb-4">&quot;On the Windows talking painted pasture
+										yet its express parties use. Sure last upon he same as knew next. Of
+										believed or diverted no.&quot;</p>
+									<h5 class="text-secondary">Kelly Willium</h5>
+									<p class="fw-medium fs--1 mb-0">Khulna, Bangladesh</p>
+								</div>
+							</div>
+							<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
+								style="border-radius:10px;transform:translate(25px, 25px)"> </div>
+						</div>
+					</div>
+					<div class="carousel-navigation d-flex flex-column flex-between-center position-absolute end-0 top-lg-50 bottom-0 translate-middle-y z-index-1 me-3 me-lg-0"
+						style="height:60px;width:20px;">
+						<button class="carousel-control-prev position-static" type="button"
+							data-bs-target="#testimonialIndicator" data-bs-slide="prev"><img
+								src="static/assets/img/icons/up.svg" width="16" alt="icon" /></button>
+						<button class="carousel-control-next position-static" type="button"
+							data-bs-target="#testimonialIndicator" data-bs-slide="next"><img
+								src="static/assets/img/icons/down.svg" width="16" alt="icon" /></button>
 					</div>
 				</div>
 			</div>
-		</div>
-	</div><!-- end of .container-->
-
-</section>
-
-<section class="pt-5" id="destination">
-	<div class="container">
-		<div class="position-absolute start-100 bottom-0 translate-middle-x d-none d-xl-block ms-xl-n4"><img
-				src="static/assets/img/dest/shape.svg" alt="destination" /></div>
-		<div class="mb-7 text-center">
-			<h5 class="text-secondary">Descrubre</h5>
-			<h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">Nuestro productos</h3>
-		</div>
-		<div class="row">
-			{% for producto in Precios %}
-			<article class="col-md-4 mb-4 ">
-				<form action="/agregar" method="post">
-					<div class="card">
-						<img class="card-img-top" src="{{producto.producto.logo}}" alt="{{producto.producto.nombre}}"
-							class="img-fluid" />
-						<div class="card-body py-4 px-3">
-							<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-								<h4 class="text-secondary fw-medium"><a
-										class="link-900 text-decoration-none stretched-link"
-										href="#!">{{producto.producto.nombre}}</a></h4><span class="fs-1 fw-medium">C$
-									{{producto.precio_actual}}</span>
-							</div>
-							<div class="d-flex align-items-center">
-
-							</div>
-						</div>
-					</div>
-					<div class="card-footer shadow-primary " style="background: white;">
-						<!-- Botón y campos ocultos aquí -->
-						<input type="text" value="{{ producto.producto.id }}"
-							name="producto_id_{{ producto.producto.id }}" hidden>
-						<input type="text" name="cantidad_{{ producto.id }}" value="1" hidden>
-						<a href="/vermas/{{producto.producto.id}}" class="btn btn-info m-3"> ver mas <i class="fas fa-info-circle"></i></a>
-						<button class="btn btn-success m-2" type="submit" data-id="{{ producto.producto.id }}">Agregar
-							al
-							<i class="fas fa-shopping-cart"></i></button>
-
-					</div>
-				</form>
-			</article>
-			{% endfor %}
 		</div>
 	</div>
+</div><!-- end of .container-->
+
+<section class="container-fluid  my-4">
+	<div class="mb-7 text-center">
+		<h5 class="text-secondary">Descrubre</h5>
+		<h3 class="fs-xl-10 fs-lg-8 fs-7 fw-bold font-cursive text-capitalize">Nuestro productos</h3>
+	</div>
+	<div class="container my-4">
+		<div class="row">
+			<!-- Columna de filtros -->
+			<div class="col-md-3">
+				<article class="row">
+					<div class="col-md-12 my-4">
+						<div class="card h-100">
+							<div class="card-body">
+								<h5 class="card-title">Filtros</h5>
+								<!-- Categorías -->
+								<form action="/shop" method="GET">
+									<div class="form-group">
+										<label for="categoria">Categoría:</label>
+										<select class="form-select "
+											 id="categoria" name="categoria">
+											 <option value="">ALL</option>
+											{% for categoria_id, categoria_data in categorias.items() %}
+											<optgroup label="{{ categoria_data.nombre }}">
+												{% for subcategoria in categoria_data.subcategorias %}
+												<option value="{{ subcategoria.id }}">{{ subcategoria.nombre }}</option>
+												{% endfor %}
+											</optgroup>
+											{% endfor %}
+										</select>
+									</div>
+
+									<!-- Rango de Precios -->
+									<div class="form-group">
+										<label for="precio_min">Precio mínimo:</label>
+										<input type="number" class="form-control" id="precio_min" name="precio_min"
+											min="0">
+									</div>
+
+									<div class="form-group">
+										<label for="precio_max">Precio máximo:</label>
+										<input type="number" class="form-control" id="precio_max" name="precio_max"
+											min="0">
+									</div>
+
+									<!-- Productos más vendidos -->
+									<div class="form-group">
+										<label for="mas_vendidos">Productos más vendidos:</label>
+										<input type="checkbox" class="form-check-input" id="mas_vendidos"
+											name="mas_vendidos" value="1">
+									</div>
+
+									<!-- Botón para aplicar filtros -->
+									<button type="submit" class="btn btn-primary">Aplicar Filtros</button>
+								</form>
+							</div>
+
+						</div>
+					</div>
+					<div class="col-md-12 my-4">
+
+					</div>
+				</article>
+
+
+			</div>
+
+			<!-- Lista de Productos -->
+			<div class="col-md-9">
+				<div class="row">
+					{% for producto in Precios %}
+					<div class="col-md-4 my-4">
+						<form action="/agregar" method="post">
+							<div class="shadow">
+								<div class="card " style="max-width: 15rem; background: white;">
+									<img class="card-img-top" src="{{producto.producto.logo}}"
+										alt="{{producto.producto.nombre}}" class="img-fluid" />
+									<div class="card-body py-4 px-3">
+										<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
+											<h4 class="text-secondary fw-medium"><a
+													class="link-900 text-decoration-none stretched-link"
+													href="#!">{{producto.producto.nombre}}</a></h4>
+											<span class="fs-1 fw-medium">C$ {{producto.precio_actual}}</span>
+										</div>
+										<div class="d-flex align-items-center"></div>
+										<input type="text" value="{{ producto.producto.id }}"
+											name="producto_id_{{ producto.producto.id }}" hidden>
+										<input type="text" name="cantidad_{{ producto.id }}" value="1" hidden>
+									</div>
+								</div>
+							</div>
+							<div class="card-footer shadow" style="background: white;">
+								<!-- Botón y campos ocultos aquí -->
+								<div class="d-flex justify-content-between align-items-center">
+									<a href="/vermas/{{producto.producto.id}}" class="btn btn-sm btn-info">Ver más <i
+											class="fas fa-info-circle"></i></a>
+									<button class="btn btn-sm btn-success" type="submit"
+										data-id="{{ producto.producto.id }}">Agregar al <i
+											class="fas fa-shopping-cart"></i></button>
+								</div>
+							</div>
+						</form>
+					</div>
+					{% endfor %}
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md-12 align-content-center">
+			<div class="col-md-12 align-content-center">
+				<nav aria-label="Page navigation example">
+					<ul class="pagination justify-content-center">
+						{% if Precios.has_prev %}
+						<li class="page-item">
+							<a class="page-link" href="{{ url_for('shop', page=Precios.prev_num) }}">
+								Previo</a>
+						</li>
+						{% else %}
+						<li class="page-item disabled">
+							<span class="page-link">Previo</span>
+						</li>
+						{% endif %}
+
+						{% for num in Precios.iter_pages() %}
+						{% if num %}
+						{% if num == Precios.page %}
+						<li class="page-item active">
+							<span class="page-link">{{ num }}</span>
+						</li>
+						{% else %}
+						<li class="page-item">
+							<a class="page-link" href="{{ url_for('shop', page=num) }}">{{ num }}</a>
+						</li>
+						{% endif %}
+						{% else %}
+						<li class="page-item disabled">
+							<span class="page-link">Previo</span>
+						</li>
+						{% endif %}
+						{% endfor %}
+
+						{% if Precios.has_next %}
+						<li class="page-item">
+							<a class="page-link" href="{{ url_for('shop', page=Precios.next_num) }}">Siguiente</a>
+						</li>
+						{% else %}
+						<li class="page-item disabled">
+							<span class="page-link">Siguiente</span>
+						</li>
+						{% endif %}
+					</ul>
+				</nav>
+			</div>
+
+		</div>
+	</div>
+
 </section>
+
 
 <script>
 
@@ -243,5 +354,11 @@
 		}
 	});
 </script>
-
+<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+<script>
+	$(".js-example-responsive").select2({
+		width: 'resolve' // need to override the changed default
+	});
+</script>
 {% endblock %}
