--- a/templates/shop.html
+++ b/templates/shop.html
@@ -210,7 +210,7 @@
 							<div class="card-footer shadow" style="background: white;">
 								<!-- Botón y campos ocultos aquí -->
 								<div class="d-flex justify-content-between align-items-center">
-									<a href="/vermas/{{producto.producto.id}}" class="btn btn-sm btn-info">Ver más <i
+									<a href="/vermas/{{producto.id}}" class="btn btn-sm btn-info">Ver más <i
 											class="fas fa-info-circle"></i></a>
 									<button class="btn btn-sm btn-success" type="submit"
 										data-id="{{ producto.producto.id }}">Agregar al <i
