--- a/templates/index.html
+++ b/templates/index.html
@@ -59,16 +59,18 @@
 				<div class="card overflow-hidden shadow"> <img class="card-img-top" src="{{Precios.producto.logo}}"
 						alt="{{Precios.producto.nombre}}" class="img-fluid" />
 					<div class="card-body py-4 px-3">
-						<div class="d-flex flex-column flex-lg-row justify-content-between mb-3">
-							<h4 class="text-secondary fw-medium"><a class="link-900 text-decoration-none stretched-link"
-									href="#!">{{Precios.producto.nombre}}</a></h4><span
-								class="fs-1 fw-medium">Explorar</span>
-						</div>
-						<div class="d-flex align-items-center"> <img src="static/assets/img/dest/navigation.svg"
-								style="margin-right: 14px" width="20" alt="navigation" /><span
-								class="fs-0 fw-medium">{{Precios.producto.subcategoria.nombre}}</span>
-						</div>
+
+						<h4 class="card-title">
+							{{Precios.producto.nombre}}</h4>
+						<span class="card-text"> Categoria: {{Precios.producto.subcategoria.nombre}}</span>
+						  <br>
+						<br>
+						<a href="/shop" class="btn btn-outline-success"><i
+							class="fas fa-info-circle"></i> Explorar mas</a>
+
+						
 					</div>
+					
 				</div>
 			</article>
 			{% endfor %}
@@ -99,8 +101,7 @@
 							src="static/assets/img/steps/selection.svg" width="22" alt="steps" /></div>
 					<div class="flex-1">
 						<h5 class="text-secondary fw-bold fs-0">Escoge tu diseño</h5>
-						<p><br class="d-none d-sm-block"> where you
-							travel inside the World.</p>
+						<p><br class="d-none d-sm-block"> Personalizamos tus ideas.</p>
 					</div>
 				</div>
 				<div class="d-flex align-items-start mb-5">
@@ -205,11 +206,9 @@
 											src="static/assets/img/testimonial/author.png" height="65" width="65"
 											alt="" /></div>
 									<div class="card-body p-4">
-										<p class="fw-medium mb-4">&quot;On the Windows talking painted pasture
-											yet its express parties use. Sure last upon he same as knew next. Of
-											believed or diverted no.&quot;</p>
-										<h5 class="text-secondary">Mike taylor</h5>
-										<p class="fw-medium fs--1 mb-0">Lahore, Pakistan</p>
+										<p class="fw-medium mb-4">Me gusta Luxx Art por como hacen los cuadro ya que son pintados a mano resaltando la creatividad de la persona que los pinta ademas de eso son de excelente calidad</p>
+										<h5 class="text-secondary">Eduardo</h5>
+										<p class="fw-medium fs--1 mb-0">Cliente VIP</p>
 									</div>
 								</div>
 								<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
@@ -222,11 +221,9 @@
 											src="static/assets/img/testimonial/author2.png" height="65" width="65"
 											alt="" /></div>
 									<div class="card-body p-4">
-										<p class="fw-medium mb-4">&quot;Jadoo is recognized as one of the finest
-											travel agency in the world. When it came to planning a trip, I found
-											them to be dependable.&quot;</p>
+										<p class="fw-medium mb-4">Luxx Art me parece un excelente emprendimiento ya que el trabajo que realizan es de excelente calidad, Ademas de eso el precio es bien accesible.</p>
 										<h5 class="text-secondary">Thomas Wagon</h5>
-										<p class="fw-medium fs--1 mb-0">CEO of Red Button</p>
+										<p class="fw-medium fs--1 mb-0">Cliente internacional</p>
 									</div>
 								</div>
 								<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
@@ -236,14 +233,12 @@
 								<div class="card shadow" style="border-radius:10px;">
 									<div class="position-absolute start-0 top-0 translate-middle"> <img
 											class="rounded-circle fit-cover"
-											src="static/assets/img/testimonial/author3.png" height="65" width="65"
+											src="https://res.cloudinary.com/dxhb03y8f/image/upload/v1694069883/kkkioxg3csdot5dz9mg9.jpg" height="65" width="65"
 											alt="" /></div>
 									<div class="card-body p-4">
-										<p class="fw-medium mb-4">&quot;On the Windows talking painted pasture
-											yet its express parties use. Sure last upon he same as knew next. Of
-											believed or diverted no.&quot;</p>
-										<h5 class="text-secondary">Kelly Willium</h5>
-										<p class="fw-medium fs--1 mb-0">Khulna, Bangladesh</p>
+										<p class="fw-medium mb-4">He tenido el placer de descubrir el maravilloso mundo de las personalizaciones gracias a 'Luxx Art'. Este emprendimiento ofrece un servicio excepcional para aquellos que desean dar un toque único a sus covers y lienzos.</p>
+										<h5 class="text-secondary">Amanda Ortiz</h5>
+										<p class="fw-medium fs--1 mb-0">Cliente frecuente</p>
 									</div>
 								</div>
 								<div class="card shadow-sm position-absolute top-0 z-index--1 mb-3 w-100 h-100"
